api-check.log
<anonymous_script>:1
<!DOCTYPE html><html lang="en-US"><head><title>Just a moment...</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=Edge"><meta name="robots" content="noindex,nofollow"><meta name="viewport" content="width=device-width,initial-scale=1"><style>*{box-sizing:border-box;margin:0;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%;color:#313131;font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"}body{display:flex;flex-direction:column;height:100vh;min-height:100vh}.main-content{margin:8rem auto;padding-left:1.5rem;max-width:60rem}@media (width <= 720px){.main-content{margin-top:4rem}}#challenge-error-text{background-image:url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIzMiIgaGVpZ2h0PSIzMiIgZmlsbD0ibm9uZSI+PHBhdGggZmlsbD0iI0IyMEYwMyIgZD0iTTE2IDNhMTMgMTMgMCAxIDAgMTMgMTNBMTMuMDE1IDEzLjAxNSAwIDAgMCAxNiAzbTAgMjRhMTEgMTEgMCAxIDEgMTEtMTEgMTEuMDEgMTEuMDEgMCAwIDEtMTEgMTEiLz48cGF0aCBmaWxsPSIjQjIwRjAzIiBkPSJNMTcuMDM4IDE4LjYxNUgxNC44N0wxNC41NjMgOS41aDIuNzgzem0tMS4wODQgMS40MjdxLjY2IDAgMS4wNTcuMzg4LjQwNy4zODkuNDA3Ljk5NCAwIC41OTYtLjQwNy45ODQtLjM5Ny4zOS0xLjA1Ny4zODktLjY1IDAtMS4wNTYtLjM4OS0uMzk4LS4zODktLjM5OC0uOTg0IDAtLjU5Ny4zOTgtLjk4NS40MDYtLjM5NyAxLjA1Ni0uMzk3Ii8+PC9zdmc+");background-repeat:no-repeat;background-size:contain;padding-left:34px}</style><meta http-equiv="refresh" content="360"></head><body><div class="main-wrapper" role="main"><div class="main-content"><noscript><div class="h2"><span id="challenge-error-text">Enable JavaScript and cookies to continue</span></div></noscript></div></div><script>(function(){window._cf_chl_opt = {cvId: '3',cZone: 'z1.idlixku.com',cType: 'managed',cRay: '9eb97f1c8d50ff92',cH: 'Sj3C4um9_q_3PuinjXH1ECQHXq5enK4n2RHW5G36SPY-1776073092-1.2.1.1-A9YlqtgSfoO48uuqLEYX217mrfUP9YC2xuD1X21YXx7kUh_7g3VZYslCeApSMCTs',cUPMDTk:"/api/homepage?__cf_chl_tk=.KSfHMLKOFtgZXH3J27jvylfSNa6jrbOPKyryjsY_RA-1776073092-1.0.1.1-tCIPxUv2wdd1YAOmFRuMVUl2WRrWSWhbHm959d5hR88",cFPWv: 'g',cITimeS: '1776073092',cTplC:0,cTplO:0,cTplV:5,cTplB: '0',fa:"/api/homepage?__cf_chl_f_tk=.KSfHMLKOFtgZXH3J27jvylfSNa6jrbOPKyryjsY_RA-1776073092-1.0.1.1-tCIPxUv2wdd1YAOmFRuMVUl2WRrWSWhbHm959d5hR88",md: 'mhj8b.J6GKM3Z7yoCf3hvFm83Mjafn.CaTNfqN9fbzo-1776073092-1.2.1.1-C3orZqobsrYaMY0Mn5cyD.BciS.YjJg7QQkUGgpm_iJuFtaK.JfLRgbfg6Q1owwmSC_OXalHzhmrRWHXpkIShmxV6_Upp7puUSNxHQjH6Cboh1oYPwS2019gtOxvDbKeU.2TggDKvRCemdHp_OPduRSiuLUuwEMJAy4vCNd354lGEa391MMcqiL.1OzmxIXy4Mai49T5OxmgGCkstO9L3YONnUouM.ZkQOTHeekSBkjWatE653WXXuH_qKIYL.pIg24b0Dh49_DrP3Hz4AsYBEbYajsmJ3_D2yNXsMDYpkHvrtExuKwCqiAkDpgCe_NeKsOh4FwAf2TwxmtSc3D.Us5vwiLMEvcPdX_OZ1wzTKxH1KiI700GxAQJ0PEdyvfhcOyIzuPPLdJn84yzGCMtniJs9sNwqRTFEu5IPSmjj8vPLg19DRKnGLEAAucC2CIviEIvH8TWNXUxXKRFdwLFvqcTjjyFqOT4yL5h.WgM0qCOWWmm1f6IT.Sqdp_A8WwVBgdxs.1C_m8hIe5lezEgUOYjw10hSBuprK6Ob0LJAEqwX_ovvV4YqhoYCO9gap8RU.jrBpF1aCwatn4C6OmdWFzznOn0JQtgNj3UAlUB876N_RxDqeI3OtL0Ep2dZ0FNFwzg0pn6qzWOCjOTcBuLZaQZY_vhUq.ICn4wRkGKPgjeaFaEskW8LJdCKaTaqUe__2ql1KZXLQaHfMvOHBFw6_.d.UVFEhe6C.7yyJB7S8dbH_wg4q7EJIbEeljxfi0FYUaK910B_2W2t9nlKt.jVmwTjPz2BGRToaTQqPixJ8hcMLX5JDeaOmiOisUXqdqo1kpaVSoECrEV1H4n3GYWIH25GuuzQfKXANWgEZFbHajDuHJYZBn.P2vZM4mW0TQLtuCGINEDmqjXbeJCeUwJdIR64MQqMFgW2JglZfS8d6jJKKDaXHSNGQpsMY6m29Ydmumz3ONxLtgd6bJkwg71qw',mdrd: 'fj1PIikzxyOwCxd4.2GZM.qqFnZii6r1LDTOG.bJGe4-1776073092-1.2.1.1-LLRdj5pk.pPYJTWgYP3OPuUZOQ3MwoqiMhtOr_RIN7jrFoxogiX7_S6pAnjTUMefZHkQ2s8xfbdYGueBtaJY0_oIILi3t_L84yU26YTSNBvHubTJq.aAxI_we4LRYjZVI0QbQnQMlqZX2ROmeLZrpVwhOsWR48.8AssphwIZaJxW2uUrEtWnxI3CYorBSw3qIbAbIthMdTHZWQVDraKZCBngD_BWduyludwqGmkQOXaE7zqhSob.xf5xQb_vSxm1wfH61j6xsJZf1ZSUOW8tsAEkGgIVaZagz3nx_wXyuwl8tSR7B45r3p5ORCtN5VRzxs9TdpVV2R_zhLLb7oJQ5Q',};var a = document.createElement('script');a.src = '/cdn-cgi/challenge-platform/h/g/orchestrate/chl_page/v1?ray=9eb97f1c8d50ff92';window._cf_chl_opt.cOgUHash = location.hash === '' && location.href.indexOf('#') !== -1 ? '#' : location.hash;window._cf_chl_opt.cOgUQuery = location.search === '' && location.href.slice(0, location.href.length - window._cf_chl_opt.cOgUHash.length).indexOf('?') !== -1 ? '?' : location.search;if (window.history && window.history.replaceState) {var ogU = location.pathname + window._cf_chl_opt.cOgUQuery + window._cf_chl_opt.cOgUHash;history.replaceState(null, null,"/api/homepage?__cf_chl_rt_tk=.KSfHMLKOFtgZXH3J27jvylfSNa6jrbOPKyryjsY_RA-1776073092-1.0.1.1-tCIPxUv2wdd1YAOmFRuMVUl2WRrWSWhbHm959d5hR88"+ window._cf_chl_opt.cOgUHash);a.onload = function() {history.replaceState(null, null, ogU);}}document.getElementsByTagName('head')[0].appendChild(a);}());</script></body></html>
^

SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
    at JSON.parse (<anonymous>)
    at parseJSONFromBytes (node:internal/deps/undici/undici:6223:19)
    at successSteps (node:internal/deps/undici/undici:6204:27)
    at readAllBytes (node:internal/deps/undici/undici:5173:13)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)

Node.js v24.4.1
